<resources>
    <string name="app_name">SocialMediaApp</string>
    <string name="register">Register</string>
    <string name="enter_you_email">Enter you email</string>
    <string name="registerButton">Register</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="profile">Profile</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="Login">Login</string>
    <string name="login_here">Login here</string>
    <string name="not_have_a_account_register">Not have a account? Register</string>
    <string name="forget_password">Forget Password? Click here to recover </string>
</resources>