<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/Login"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_you_email"
        android:layout_centerInParent="true"
        android:autofillHints="" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        android:layout_below="@id/email"
        android:autofillHints="" />

    <!--Button-->
    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerInParent="true"
        android:text="@string/login_here"
        android:id="@+id/login_button"/>

    <TextView
        android:id="@+id/notAlreadyAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_have_a_account_register"
        android:layout_below="@id/login_button"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>

</RelativeLayout>